--- a/GasWaage/app/src/main/AndroidManifest.xml
+++ b/GasWaage/app/src/main/AndroidManifest.xml
@@ -12,10 +12,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.GasWaage" >
+        android:theme="@android:style/Theme.Holo.Light" >
         <activity
             android:name=".MainActivity"
-            android:theme="@style/Theme.Design.NoActionBar">
+            android:theme="@style/Theme.Design.Light">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
